welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: 'case' expected but '(' found.
    (false, false) => return Nil
    ^sleepIn:4: error: '}' expected but ';' found.
    (true, false) => return Nil
^sleepIn:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    (true, false) => return Nil
     ^sleepIn:12: error: eof expected but '}' found.
 }
 ^