welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	(weekday, vacation) match {
    (false, false) => return Nil
    (true, false) => return Nil
  }
  
  if (!weekday || vacation)
  	return true
  else
  	return false
}